improve checks to ensure large file sizes aren't uploaded

--- a/png-svg-plugin/ui.html
+++ b/png-svg-plugin/ui.html
@@ -53,6 +53,9 @@
 
     svg += `</svg>`;
 
-    window.parent.postMessage({ pluginMessage: svg }, "*");
+    window.parent.postMessage(
+      { pluginMessage: { type: "complete", data: svg } },
+      "*"
+    );
   };
 </script>
